--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <section>
             <input id="texto-tarefa" type="text">
         </section>
+        <div>
+            <ol id="lista-tarefas"></ol>
+        </div>
     </main>
 </body>
 </html>
