--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <div>
             <ol id="lista-tarefas"></ol>
         </div>
+        <button id="criar-tarefa" type="submit">Adicionar</button>
+        <script src="/script.js"></script>
     </main>
 </body>
 </html>
