--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div>
             <ol id="lista-tarefas"></ol>
         </div>
+        <button id="apaga-tudo">Clear</button>
         <script src="/script.js"></script>
     </main>
 </body>
