--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <ol id="lista-tarefas"></ol>
         </div>
         <button id="apaga-tudo">Clear</button>
+        <button id="remover-finalizados">Remove Concluídos</button>
         <script src="/script.js"></script>
     </main>
 </body>
