--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Minha Lista de Tarefas</h1>
-        <p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
-    </header>
-    <main>
-        <section>
+    <main class="container">
+        <header>
+            <h1>Minha Lista de Tarefas</h1>
+            <p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
+        </header>
+        <section id="input-button">
+            <label for="texto-tarefa" id="labTarefa">Tarefa:</label>
             <input id="texto-tarefa" type="text">
             <button id="criar-tarefa" type="submit">Adicionar</button>
         </section>
