ajustando caminhos do script e style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="width=device-width, initial-scale=1.0" />
     <title>Lista de Tarefas</title>
     <link rel="stylesheet"
-        href="style.css" />
+        href="./style.css" />
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <button id="apaga-tudo">Clear</button>
         <button id="remover-finalizados">Remove Concluídos</button>
         <button id="salvar-tarefas">Salvar</button>
-        <script src="/script.js"></script>
+        <script src="./script.js"></script>
     </main>
 </body>
 
